Se agrego Webpack

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app">API 2</div>
   <script src="./../js/API.js"></script>
 
   <!-- JS Files-->
@@ -34,8 +34,6 @@
   <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
-
-
 
 </body>
 
