--- a/src/app/index.html
+++ b/src/app/index.html
@@ -25,15 +25,21 @@
 </head>
 
 <body>
-  <div id="app">API 2</div>
-  <script src="./../js/API.js"></script>
+
+ 
+
+
 
   <!-- JS Files-->
   <!--JQuery, Popper + Boostrap -->
 
-  <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"></script>
+
+
+
+  <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+  <script src="./../js/API.js"></script>
+
+ 
 
 </body>
 
