--- a/src/app/index.html
+++ b/src/app/index.html
@@ -26,9 +26,7 @@
 
 <body>
 
- 
-
-
+  <input type="text" id="searchByName" placeholder="¿Que vamos a cocinas hoy" title="Type in a name">
 
   <!-- JS Files-->
   <!--JQuery, Popper + Boostrap -->
@@ -39,7 +37,20 @@
   <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   <script src="./../js/API.js"></script>
 
- 
+  <script>
+    var inputByName = document.getElementById("searchByName");
+
+    // Execute a function when the user presses a key on the keyboard
+    inputByName.addEventListener("keypress", function (event) {
+      // If the user presses the "Enter" key on the keyboard
+      if (event.key === "Enter") {
+
+        var search = inputByName.value.toUpperCase();
+        console.log("Buscar: ",search)
+        apiByName(search);
+      }
+    });
+  </script>
 
 </body>
 
