--- a/src/app/index.html
+++ b/src/app/index.html
@@ -27,6 +27,7 @@
 <body>
 
   <input type="text" id="searchByName" placeholder="¿Que vamos a cocinas hoy" title="Type in a name">
+  <button type="button" id="printResults">Print Results</button>
 
   <!-- JS Files-->
   <!--JQuery, Popper + Boostrap -->
@@ -36,7 +37,7 @@
 
   <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   <script src="./../js/API.js"></script>
-
+  
   <script>
     var inputByName = document.getElementById("searchByName");
 
