div #app, variables dataHead dataMeals, imprime primer nombre

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -28,6 +28,8 @@
 
   <input type="text" id="searchByName" placeholder="¿Que vamos a cocinas hoy" title="Type in a name">
   <button type="button" id="printResults">Print Results</button>
+  <!-- Agregué div #app para imprimir los resultados -->
+  <div id="app"></div>
 
   <!-- JS Files-->
   <!--JQuery, Popper + Boostrap -->
@@ -37,7 +39,7 @@
 
   <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   <script src="./../js/API.js"></script>
-  
+
   <script>
     var inputByName = document.getElementById("searchByName");
 
