--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -53,6 +53,10 @@ body {
   background-color: var(--color-body);
 }
 
+#app{
+  display: block;
+}
+
 .bd-placeholder-img {
   font-size: 1.125rem;
   text-anchor: middle;
