--- a/src/app/index.html
+++ b/src/app/index.html
@@ -27,6 +27,9 @@
 <body>
 
   <input type="text" id="searchByName" placeholder="¿Que vamos a cocinas hoy" title="Type in a name">
+  <button type="button" id="printResults">Print Results</button>
+  <!-- Agregué div #app para imprimir los resultados -->
+  <div id="app"></div>
 
   <!-- JS Files-->
   <!--JQuery, Popper + Boostrap -->
