Remplaza resultados, HTMLResponse scope global, add  node HTMLReplace

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -29,8 +29,8 @@
   <input type="text" id="searchByName" placeholder="¿Que vamos a cocinas hoy" title="Type in a name">
   <button type="button" id="printResults">Print Results</button>
   <!-- Agregué div #app para imprimir los resultados -->
-  <div class="container">
-    <div id="app" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+  <div id="app" class="container">
+    <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3"> -->
 
       <!-- Esta card se tiene que imprimir para cada receta -->
       <!-- <div class="col">
