Cambiando titulo a Recetas Aleatorias

--- a/src/app/generador.html
+++ b/src/app/generador.html
@@ -95,7 +95,7 @@
               />
               <circle cx="12" cy="13" r="4" />
             </svg>
-            <strong>Album</strong>
+            <strong>Recetas Aleatorias</strong>
           </a>
           <button
             class="navbar-toggler"
