--- a/src/app/generador.html
+++ b/src/app/generador.html
@@ -20,6 +20,8 @@
       rel="stylesheet"
     />
     <link href="./../css/styles.css" rel="stylesheet" />
+    <link href="./../css/generator.css" rel="stylesheet" />
+
     <!-- Favicons -->
     <link
       rel="apple-touch-icon"
