CSS de pagina INDEX con el buscador

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -26,7 +26,24 @@
 
 <body>
 
-  <input type="text" id="searchByName" placeholder="¿Que vamos a cocinas hoy" title="Type in a name">
+  <header class="container-lg">
+    <div class="row justify-content-md-center mt-3 mb-4">
+      <div class="col col-3">
+        <img class="img-fluid" src="./../img/logo-LikeAChef.png" alt="Logotipo Like A Chef">
+      </div>
+    </div>
+  </header>
+  <main class="container-lg">
+
+  </main>
+  <footer class="container-lg">
+    <div class="row justify-content-md-center">
+      <input type="text" id="searchByName" class="col-8" placeholder="What are we going to cook today?" title="Type in a name">
+      <button type="button" id="btnSearchByName" class="col-3"><i class="icofont-search-restaurant"></i> Search</button>
+    </div>
+
+  </footer>
+
 
   <!-- JS Files-->
   <!--JQuery, Popper + Boostrap -->
