Cambios en direcciones de js y css

--- a/src/app/searchById.html
+++ b/src/app/searchById.html
@@ -11,7 +11,7 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="C:\Users\maeun\Documents\BEDU - WD\Proyecto F2\RecetarioBEDU\src\css\searchById.css">
+    <link rel="stylesheet" href="/src/css/searchById.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Pacifico&display=swap">
 
@@ -74,7 +74,7 @@
         crossorigin="anonymous"></script>
 
 
-    <script src="C:\Users\maeun\Documents\BEDU - WD\Proyecto F2\RecetarioBEDU\src\js\searchById.js"></script>
+    <script src="/src/js/searchById.js"></script>
 </body>
 
 </html>
