--- a/src/app/index.html
+++ b/src/app/index.html
@@ -52,16 +52,96 @@
     <!-- </div> -->
   </div>
 
-  <div id="app"></div>
+  <header class="container-lg">
+    <div class="row justify-content-md-center mt-3 mb-4">
+      <div class="col col-3">
+        <img class="img-fluid" src="./../img/logo-LikeAChef.png" alt="Logotipo Like A Chef" />
+      </div>
+    </div>
+  </header>
+  <main class="container-lg">
+    <div class="row justify-content-md-center">
+      <input type="text" id="inputByName" class="col-8" placeholder="What are we going to cook today?"
+        title="Type in a name" />
+      <button type="button" id="searchByName" class="btn btn-chef col-3">
+        <i class="icofont-search-restaurant"></i> Search
+      </button>
+    </div>
+    <div id="subSelect" class="row justify-content-md-between mt-4">
+      <div class="col-4 text-center px-lg-4">
+        <h5>Don't know what to cook?</h5>
+        <!-- <button type="button" id="btnSearchRandom" class="btn btn-chef">Recommend me a recipe</button> -->
+        <a id="searchRandom" href="#">Recommend me a recipe <i class="icofont-culinary"></i></a>
+      </div>
+      <div class="col-4 text-center px-lg-4">
+        <h5>Know typical dishes of</h5>
+        <select id="searchBycategories" class="form-select" aria-label="Default select example">
+          <option selected>Select a Category</option>
+        </select>
+      </div>
+      <!-- <div class="col-4 d-flex align-items-center justify-content-start ps-4"> -->
+      <div class="col-4 text-center px-lg-4">
+        <h5>Know typical dishes of</h5>
+        <select id="searchByArea" class="form-select" aria-label="Default select example">
+          <option selected>Select a country</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+      </div>
+    </div>
+    <section id="indexResultados" class="row row-cols-1 row-cols-md-3 g-4 mt-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+              content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a short card.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+              content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+              content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+
+
+    </section>
+  </main>
+  <footer class="container-lg"></footer>
 
   <!-- JS Files-->
   <!--JQuery, Popper + Boostrap -->
 
-
-
-
   <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   <script src="./../js/API.js"></script>
+  <script src="./../js/ejemplo.js"></script>
 
   <script>
     var inputByName = document.getElementById("searchByName");
@@ -70,14 +150,12 @@
     inputByName.addEventListener("keypress", function (event) {
       // If the user presses the "Enter" key on the keyboard
       if (event.key === "Enter") {
-
         var search = inputByName.value.toUpperCase();
-        console.log("Buscar: ",search)
+        console.log("Buscar: ", search);
         apiByName(search);
       }
     });
   </script>
-
 </body>
 
 </html>
