--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,6 +13,10 @@
 *     1. TIPOGRAFIAS
 *     2. VARIABLES ROOT
 *     3. PLANTILLA
+*     4. PARRAFO Y TITULOS
+*     5. BOTONES
+*     6. FORMULARIO
+*     7. INDEX
 ----------------------------------------------- */
 
 /*@import "normalize.css";*/
@@ -36,7 +40,7 @@
   --color-2: #D48432;
   --color-dark1: #3E2B19;
   --color-dark2: #1D0F02;
-  --color-txt: #1E1E1E;
+  --color-txt: #312214;
   --color-back: #EBDED3;
   --color-body: #FAF2EA;
   --color-borde: var(--color-dark1);
@@ -46,8 +50,8 @@
   --font-icon: 'IcoFont';
 }
 
-$color-1: var(--color1);
-$color-2: var(--color2);
+$color-1: var(--color-1);
+$color-2: var(--color-2);
 $color-dark1: var(--color-dark1);
 $color-dark2: var(--color-dark2);
 $color-txt: var(--color-txt);
@@ -61,7 +65,6 @@ $font-icon: var(--font-icon);
 
 
 /* ########## 3. PLANTILLA ########## */
-
 html {
   font-family: sans-serif;
   line-height: 1.15;
@@ -80,8 +83,6 @@ body {
   text-align: left;
   background-color: $color-body;
 }
-
-
 
 .bd-placeholder-img {
   font-size: 1.125rem;
@@ -132,4 +133,163 @@ body {
   text-align: center;
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
+}
+
+/* ########## 4. PARRAFO Y TITULOS  ########## */
+h5{
+  font-size: 0.875rem;
+  font-weight: 700;
+}
+
+/* ########## 5. BOTONES  ########## */
+.btn-chef {
+  text-align: center;
+  font-family: $font-title;
+  font-size: 1.125rem;
+  color: $color-back;
+  background-color: $color-1;
+  border: 0;
+  border-radius: 20px;
+  
+  &:hover,
+  &:active,
+  &:focus  {
+    color: $color-back;
+    background-color: $color-dark1;
+  }
+}
+
+/* ########## 6. FORMULARIO  ########## */
+
+.card{
+  background-color: #EBDED3;
+  border: 1px solid #bcb1a8;
+  border-radius: 0;
+}
+
+/* ########## 7. FORMULARIO  ########## */
+.form-control, .form-select{
+  font-size: 0.875rem; 
+  color: $color-1;
+  padding: 5px 15px;
+  border: 1px solid $color-1;
+  border-right: 0 !important;
+  border-radius: 20px;
+  box-shadow: inset 0 0 3px 0 $color-dark1;
+  &::-webkit-input-placeholder {
+    /* Edge */
+    font-family: $font-title;
+    font-size: 1.25rem;
+    color: $color-1;
+  }
+
+  &:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    font-family: $font-title;
+    font-size: 1.25rem;
+    color: $color-1;
+  }
+
+  &::placeholder {
+    font-family: $font-title;
+    font-size: 1.25rem;
+    color: $color-1;
+  }
+
+  &:hover,
+  &:focus,
+  &:active{
+    border-color: $color-2;
+    outline: 0 none;
+    box-shadow: 0px 0px 8px 1px rgba(212,132,50,0.75);
+    -webkit-box-shadow: 0px 0px 8px 1px rgba(212,132,50,0.75);
+    -moz-box-shadow: 0px 0px 8px 1px rgba(212,132,50,0.75);
+
+  }
+ }
+
+.form-select{
+  padding-right: 2.25rem;
+ }
+
+/* ########## 8. INDEX  ########## */
+#inputByName {
+  text-align: center;
+  font-size: 1.0rem; 
+  color: $color-1;
+  padding: 5px 15px;
+  border: 1px solid $color-1;
+  border-right: 0 !important;
+  border-radius: 20px 0 0 20px;
+  box-shadow: inset 0 0 3px 0 $color-dark1;
+
+  &::-webkit-input-placeholder {
+    /* Edge */
+    font-family: $font-title;
+    font-size: 1.25rem;
+    color: $color-1;
+  }
+
+  &:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    font-family: $font-title;
+    font-size: 1.25rem;
+    color: $color-1;
+  }
+
+  &::placeholder {
+    font-family: $font-title;
+    font-size: 1.25rem;
+    color: $color-1;
+  }
+
+  &:hover,
+  &:focus,
+  &:active{
+    border-color: $color-2;
+    outline: 0 none;
+    box-shadow: 0px 0px 8px 1px rgba(212,132,50,0.75);
+    -webkit-box-shadow: 0px 0px 8px 1px rgba(212,132,50,0.75);
+    -moz-box-shadow: 0px 0px 8px 1px rgba(212,132,50,0.75);
+
+  }
+}
+
+#searchByName{
+  font-size: 1.25rem;
+  border-radius: 0 20px 20px 0;
+}
+
+#searchRandom {
+  font-family: $font-title;
+  font-size: 1.25rem;
+  color: $color-1;
+  text-decoration: none;
+  i { font-size: 2rem; }
+  &:hover{ color: $color-2; }
+}
+
+#searchBycategories,
+#searchByArea{
+  // width: auto;
+  font-family: var(--font-title);
+  font-size: 1.0rem;
+  color: var(--color-1);
+  padding-right: 3.5rem;
+  text-align: center;
+  text-align-last:center;
+  
+  option{
+    font-family: $font-main;
+    text-align: left;
+  }
+}
+
+#subSelect > div {
+  border-right: $linea-borde;
+  border-width: 2px;
+
+  &:last-child{
+    border-right: 0;
+  }
 }
