move function print to new js file 'print.js'

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -144,6 +144,7 @@
 
   <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   <script src="./../js/API.js"></script>
+  <script src="./../js/print.js"></script>
   <script src="./../js/ejemplo.js"></script>
 
   <script>
