--- a/src/app/index.html
+++ b/src/app/index.html
@@ -25,37 +25,8 @@
 </head>
 
 <body>
-
-  <input type="text" id="searchByName" placeholder="¿Que vamos a cocinas hoy" title="Type in a name">
-  <button type="button" id="printResults">Print Results</button>
-  <!-- Agregué div #app para imprimir los resultados -->
-<<<<<<< HEAD
-
-  <div id="app"></div>
-=======
-  <div id="app" class="container">
-    <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3"> -->
-
-      <!-- Esta card se tiene que imprimir para cada receta -->
-      <!-- <div class="col">
-        <div class="card shadow-sm">
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-          <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-              </div>
-              <small class="text-muted">9 mins</small>
-            </div>
-          </div>
-        </div>
-      </div> -->
-    <!-- </div> -->
-  </div>
-
+  <!-- <input type="text" id="searchByName" placeholder="¿Que vamos a cocinar hoy" title="Type in a name">
+  <button type="button" id="printResults">Print Results</button> -->
   <header class="container-lg">
     <div class="row justify-content-md-center mt-3 mb-4">
       <div class="col col-3">
@@ -94,7 +65,32 @@
         </select>
       </div>
     </div>
-    <section id="indexResultados" class="row row-cols-1 row-cols-md-3 g-4 mt-4">
+    <!-- Agregué div #app para imprimir los resultados -->
+    <div id="app" class="container">
+      <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3"> -->
+
+        <!-- Esta card se tiene que imprimir para cada receta -->
+        <!-- <div class="col">
+          <div class="card shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+
+            <div class="card-body">
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                </div>
+                <small class="text-muted">9 mins</small>
+              </div>
+            </div>
+          </div>
+        </div> -->
+      <!-- </div> -->
+    </div>
+
+    <!-- la sección #indexResultados será agregada en #app una vez que se ejecuta la funcion js -->
+    <!-- <section id="indexResultados" class="row row-cols-1 row-cols-md-3 g-4 mt-4">
       <div class="col">
         <div class="card h-100">
           <img src="..." class="card-img-top" alt="...">
@@ -134,22 +130,24 @@
           </div>
         </div>
       </div>
+    </section> -->
 
+  </main>
+  <footer class="container-lg"></footer>
 
     </section>
   </main>
   <footer class="container-lg"></footer>
->>>>>>> 2b6b422c055f4e62d1c7092d412186a4e7d80bb4
-
   <!-- JS Files-->
   <!--JQuery, Popper + Boostrap -->
 
   <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   <script src="./../js/API.js"></script>
+  <script src="./../js/print.js"></script>
   <script src="./../js/ejemplo.js"></script>
 
   <script>
-    var inputByName = document.getElementById("searchByName");
+    var inputByName = document.getElementById("inputByName");
 
     // Execute a function when the user presses a key on the keyboard
     inputByName.addEventListener("keypress", function (event) {
