Actualización index con Titulo Resultados y Total de recetas

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -62,7 +62,12 @@
         </select>
       </div>
     </div>
-    <section id="indexResultados" class="row row-cols-1 row-cols-md-3 g-4 mt-4">
+    <div id="results" class="alert alert-result mt-4 d-flex justify-content-between align-items-center" >
+      <h3 id="titleResults">Recipes of</h3>
+      <p id="totalResults">12 recipes found</p>
+    </div>
+    
+    <section id="cardsResultados" class="row row-cols-1 row-cols-md-3 g-4 mt-3">
       <div class="col">
         <div class="card h-100">
           <img src="..." class="card-img-top" alt="...">
