--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -128,11 +128,36 @@ h5 {
   background-color: var(--color-dark1);
 }
 
-/* ########## 6. FORMULARIO  ########## */
+/* ########## 6. CARDS & ALERTS  ########## */
 .card {
-  background-color: #EBDED3;
-  border: 1px solid #bcb1a8;
+  background-color: #f7e8d9;
+  border: 1px solid #edcdad;
   border-radius: 0;
+}
+.card .card-title {
+  font-family: var(--font-title);
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+
+.alert-result {
+  background-color: #f7e8d9;
+  border: 1px solid #edcdad;
+}
+.alert-result * {
+  margin: 0;
+  padding: 0;
+}
+.alert-result:before {
+  content: "";
+  position: absolute;
+  bottom: -20px;
+  left: calc(50% - 10px);
+  width: 0;
+  height: 0;
+  border-width: 20px 30px 0;
+  border-style: solid;
+  border-color: #edcdad transparent transparent;
 }
 
 /* ########## 7. FORMULARIO  ########## */
