Actualización de INDEX.HTML, PRINT.JS y se agrega pagina RANDOM.HTML

--- a/src/app/recipe.html
+++ b/src/app/recipe.html
@@ -41,7 +41,7 @@
       <div class="col-4 text-center px-lg-4">
         <h5 class="m-0">Don't know what to cook?</h5>
         <!-- <button type="button" id="btnSearchRandom" class="btn btn-chef">Recommend me a recipe</button> -->
-        <a id="searchRandom" href="#">Recommend me a recipe <i class="icofont-culinary"></i></a>
+        <a id="searchRandom" href="./random.html">Recommend me a recipe <i class="icofont-culinary"></i></a>
       </div>
     </div>
   </header>
