Actualización de INDEX.HTML... ya muestra correctamente los resultados

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -77,11 +77,9 @@
 
 
     <!-- Agregué div #app para imprimir los resultados -->
-    <div id="app">
-      
-    </div>
+    <section id="cardsResultados" class="row row-cols-1 row-cols-md-3 g-4 mt-3">
 
-   
+    </section>
 
   </main>
   <footer class="container-lg"></footer>
