--- a/src/app/random.html
+++ b/src/app/random.html
@@ -1,79 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Buscador de Recetas - Proyecto Final BEDU"
+    />
+    <meta
+      name="author"
+      content="Ma. Eunice Vazquez, Eder Bermudez, Carlos Jiménez, Dionicio Mata, Victor Morales"
+    />
+    <meta name="keywords" content="Buscador de Recetas, BEDU, JS" />
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Buscador de Recetas - Proyecto Final BEDU" />
-  <meta name="author" content="Ma. Eunice Vazquez, Eder Bermudez, Carlos Jiménez, Dionicio Mata, Victor Morales" />
-  <meta name="keywords" content="Buscador de Recetas, BEDU, JS" />
+    <title>Like A Cheff - Buscador de Recetas BEDU</title>
 
-  <title>Like A Cheff - Buscador de Recetas BEDU</title>
+    <link
+      href="./../../node_modules/bootstrap/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link href="./../css/styles.css" rel="stylesheet" />
 
-  <link href="./../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="./../css/styles.css" rel="stylesheet" />
+    <!-- Favicons -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./../favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./../favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./../favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./../favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="./../favicon/safari-pinned-tab.svg"
+      color="#914d0c"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+  </head>
 
-  <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./../favicon/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./../favicon/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="./../favicon/favicon-16x16.png" />
-  <link rel="manifest" href="./../favicon/site.webmanifest" />
-  <link rel="mask-icon" href="./../favicon/safari-pinned-tab.svg" color="#914d0c" />
-  <meta name="msapplication-TileColor" content="#da532c" />
-  <meta name="theme-color" content="#ffffff" />
-</head>
-
-<body>
-  <header class="container-lg">
-    <div class="row mt-3 mb-4 d-flex align-items-center justify-content-md-between">
-      <div class="col col-2">
-        <img class="img-fluid" src="./../img/logo-LikeAChef.png" alt="Logotipo Like A Chef" />
-      </div>
-      <div class="col col-6">
-        <div class="row justify-content-md-center">
-          <input type="text" id="inputByName" class="col-8" placeholder="What are we going to cook today?"
-            title="Type in a name" />
-          <button type="button" id="searchByName" class="btn btn-chef col-3">
-            <i class="icofont-search-restaurant"></i> Search
-          </button>
+  <body>
+    <header class="container-lg">
+      <div
+        class="row mt-3 mb-4 d-flex align-items-center justify-content-md-between"
+      >
+        <div class="col col-2">
+          <img
+            class="img-fluid"
+            src="./../img/logo-LikeAChef.png"
+            alt="Logotipo Like A Chef"
+          />
+        </div>
+        <div class="col col-6">
+          <div class="row justify-content-md-center">
+            <input
+              type="text"
+              id="inputByName"
+              class="col-8"
+              placeholder="What are we going to cook today?"
+              title="Type in a name"
+            />
+            <button type="button" id="searchByName" class="btn btn-chef col-3">
+              <i class="icofont-search-restaurant"></i> Search
+            </button>
+          </div>
+        </div>
+        <div class="col-4 text-center px-lg-4">
+          <h5 class="m-0">Don't know what to cook?</h5>
+          <!-- <button type="button" id="btnSearchRandom" class="btn btn-chef">Recommend me a recipe</button> -->
+          <a id="searchRandom" href="./random.html"
+            >Recommend me a recipe <i class="icofont-culinary"></i
+          ></a>
         </div>
       </div>
-      <div class="col-4 text-center px-lg-4">
-        <h5 class="m-0">Don't know what to cook?</h5>
-        <!-- <button type="button" id="btnSearchRandom" class="btn btn-chef">Recommend me a recipe</button> -->
-        <a id="searchRandom" href="./random.html">Recommend me a recipe <i class="icofont-culinary"></i></a>
+    </header>
+    <main class="container-lg">
+      <section
+        id="indexResultados"
+        class="row row-cols-1 row-cols-md-3 g-4 mt-4"
+      ></section>
+    </main>
+    <div class="container">
+      <div class="row text-center">
+        <h3>¡¿Hambre?!</h3>
+        <h5>Consigue una receta aleatoria!!</h5>
+        <button id="get_meal_btn" class="button-primary">Obtener receta</button>
       </div>
+      <div id="meal" class="row meal"></div>
     </div>
-  </header>
-  <main class="container-lg">
-    <section id="indexResultados" class="row row-cols-1 row-cols-md-3 g-4 mt-4">
-      
+    <footer class="container-lg"></footer>
 
-    </section>
-  </main>
-  <footer class="container-lg"></footer>
+    <!-- JS Files-->
+    <!--JQuery, Popper + Boostrap -->
 
-  <!-- JS Files-->
-  <!--JQuery, Popper + Boostrap -->
+    <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="./../js/API.js"></script>
+    <script src="./../js/ejemplo.js"></script>
+    <script src="../js/apiMeal.js"></script>
+    <script>
+      var inputByName = document.getElementById("searchByName");
 
-  <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-  <script src="./../js/API.js"></script>
-  <script src="./../js/ejemplo.js"></script>
-
-  <script>
-    var inputByName = document.getElementById("searchByName");
-
-
-    // Execute a function when the user presses a key on the keyboard
-    inputByName.addEventListener("keypress", function (event) {
-      // If the user presses the "Enter" key on the keyboard
-      if (event.key === "Enter") {
-        var search = inputByName.value.toUpperCase();
-        console.log("Buscar: ", search);
-        apiByName(search);
-      }
-    });
-  </script>
-</body>
-
+      // Execute a function when the user presses a key on the keyboard
+      inputByName.addEventListener("keypress", function (event) {
+        // If the user presses the "Enter" key on the keyboard
+        if (event.key === "Enter") {
+          var search = inputByName.value.toUpperCase();
+          console.log("Buscar: ", search);
+          apiByName(search);
+        }
+      });
+    </script>
+  </body>
 </html>
