--- a/src/app/random.html
+++ b/src/app/random.html
@@ -9,9 +9,16 @@
   <meta name="keywords" content="Buscador de Recetas, BEDU, JS" />
 
   <title>Like A Cheff - Buscador de Recetas BEDU</title>
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="./../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="./../css/styles.css" rel="stylesheet" />
+  <link href="./../css/generator.css" rel="stylesheet" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Pacifico&display=swap">
+
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="./../favicon/apple-touch-icon.png" />
@@ -51,8 +58,6 @@
   <div class="container">
     <div class="row text-center">
       <h3>¡¿Hambre?!</h3>
-      <h5>Consigue una receta aleatoria!!</h5>
-      <button id="get_meal_btn" class="button-primary">Obtener receta</button>
     </div>
     <div id="meal" class="row meal"></div>
   </div>
