terminando el estilo para la card de imagen,area,categoriay tag

--- a/src/css/generator.css
+++ b/src/css/generator.css
@@ -16,3 +16,14 @@
 #contenedor {
   display: flex;
 }
+
+h5 {
+  font-size: 0.875rem;
+  font-weight: 700;
+  color: #914d0c;
+}
+
+strong,
+h3 {
+  color: #914d0c;
+}
