--- a/src/app/random.html
+++ b/src/app/random.html
@@ -57,7 +57,8 @@
   </main>
   <div class="container">
     <div class="row text-center">
-      <h3>¡¿Hambre?!</h3>
+      <h3>Our recommendation... ENJOY IT!!</h3>
+      <br>
     </div>
     <div id="meal" class="row meal"></div>
   </div>
