--- a/src/app/index.html
+++ b/src/app/index.html
@@ -59,9 +59,6 @@
         <h5>Know typical dishes of</h5>
         <select id="searchByArea" class="form-select" aria-label="Default select example">
           <option selected>Select a country</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
         </select>
       </div>
     </div>
@@ -90,6 +87,7 @@
   <script src="./../js/API.js"></script>
   <script src="./../js/print.js"></script>
   <script src="./../js/ejemplo.js"></script>
+  <script src="./../js/searchByArea.js"></script>
 
 </body>
 
