--- a/src/app/random.html
+++ b/src/app/random.html
@@ -57,7 +57,7 @@
   </main>
   <div class="container">
     <div class="row text-center">
-      <h3 id="recommendation">Our recommendation... ENJOY IT!!</h3>
+      <h3 id="recommendation" class="card-title">Our recommendation... ENJOY IT!!</h3>
       <br>
     </div>
     <div id="meal" class="row meal"></div>
