--- a/src/css/generator.css
+++ b/src/css/generator.css
@@ -1,3 +1,7 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Pacifico&display=swap");
+@import url("./../libs/icofont/icofont.min.css");
+
 .videoWrapper {
   position: relative;
   padding-bottom: 56.25%;
@@ -29,6 +33,7 @@ h5 {
 }
 
 strong,
-h3 {
+h3,
+h4 {
   color: #914d0c;
 }
