Finalizando card para video y estilos para fuentes

--- a/src/css/generator.css
+++ b/src/css/generator.css
@@ -37,3 +37,12 @@ h3,
 h4 {
   color: #914d0c;
 }
+
+@media only screen and (min-width: 768px) {
+  iframe {
+    height: 13em;
+  }
+  .card {
+    width: 50%;
+  }
+}
