--- a/src/app/index.html
+++ b/src/app/index.html
@@ -66,45 +66,25 @@
       </div>
     </div>
 
-    <<<<<<< HEAD <div id="results"
-      class="alert alert-result mt-4 d-flex justify-content-between align-items-center d-none">
+    <div id="results" class="alert alert-result mt-4 d-flex justify-content-between align-items-center d-none">
       <h3 id="titleResults"></h3>
       <p id="totalResults"></p>
-      </div>
-      =======
-      <input type="text" id="searchByName" placeholder="¿Que vamos a cocinas hoy" title="Type in a name">
-      <button type="button" id="printResults">Print Results</button>
-      <!-- Agregué div #app para imprimir los resultados -->
-      <div id="app" class="container">
-        <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3"> -->
-        >>>>>>> 0af069f9b6738821b17e2ea6132f2a16bcd2f4de
+    </div>
 
-        <div id="noResults" class="alert alert-danger mt-4 d-flex justify-content-center align-items-center d-none">
-          <h4 id="titleNoResults" class="m-0"></h4>
-        </div>
+    <div id="noResults" class="alert alert-danger mt-4 d-flex justify-content-center align-items-center d-none">
+      <h4 id="titleNoResults" class="m-0"></h4>
+    </div>
 
 
-        <div class="card-body">
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-            content. This content is a little bit longer.</p>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-            </div>
-            <small class="text-muted">9 mins</small>
-          </div>
-        </div>
-      </div>
-      </div> -->
-      <!-- </div> -->
-      </div>
+    <!-- Agregué div #app para imprimir los resultados -->
+    <section id="cardsResultados" class="row row-cols-1 row-cols-md-3 g-4 mt-3">
 
-      <!-- Agregué div #app para imprimir los resultados -->
-      <section id="cardsResultados" class="row row-cols-1 row-cols-md-3 g-4 mt-3">
+    </section>
 
-      </section>
+  </main>
+  <footer class="container-lg"></footer>
 
+  </section>
   </main>
   <footer class="container-lg"></footer>
   <!-- JS Files-->
@@ -114,6 +94,7 @@
   <script src="./../js/API.js"></script>
   <script src="./../js/print.js"></script>
   <script src="./../js/ejemplo.js"></script>
+
 
 </body>
 
