--- a/src/app/random.html
+++ b/src/app/random.html
@@ -34,7 +34,8 @@
   <header class="container-lg">
     <div class="row mt-3 mb-4 d-flex align-items-center justify-content-md-between">
       <div class="col col-2">
-        <img class="img-fluid" src="./../img/logo-LikeAChef.png" alt="Logotipo Like A Chef" />
+        <a href="./index.html"><img class="img-fluid" src="./../img/logo-LikeAChef.png"
+            alt="Logotipo Like A Chef" /></a>
       </div>
       <div class="col col-6">
         <div class="row justify-content-md-center">
@@ -57,7 +58,7 @@
   </main>
   <div class="container">
     <div class="row text-center">
-      <h3 id="recommendation" class="card-title">Our recommendation... ENJOY IT!!</h3>
+      <h2 id="recommendation" class="card-title">Our recommendation... ENJOY IT!!</h2>
       <br>
     </div>
     <div id="meal" class="row meal"></div>
