Se muestran los platos en consola por categoria

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -49,7 +49,7 @@
         <a id="searchRandom" href="./random.html">Recommend me a recipe <i class="icofont-culinary"></i></a>
       </div>
       <div class="col-4 text-center px-lg-4">
-        <h5>Know typical dishes of</h5>
+        <h5>Know dishes by their category</h5>
         <select id="searchBycategories" class="form-select" aria-label="Default select example">
           <option selected>Select a Category</option>
         </select>
@@ -86,7 +86,7 @@
   <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   <script src="./../js/API.js"></script>
   <script src="./../js/print.js"></script>
-  <script src="./../js/ejemplo.js"></script>
+  <script src="./../js/searchByCategory.js"></script>
   <script src="./../js/searchByArea.js"></script>
 
 </body>
