--- a/src/app/index.html
+++ b/src/app/index.html
@@ -63,12 +63,12 @@
       </div>
     </div>
 
-    <div id="results" class="alert alert-result mt-4 d-flex justify-content-between align-items-center d-none" >
+    <div id="results" class="alert alert-result mt-4 d-flex justify-content-between align-items-center d-none">
       <h3 id="titleResults"></h3>
       <p id="totalResults"></p>
     </div>
 
-    <div id="noResults" class="alert alert-danger mt-4 d-flex justify-content-center align-items-center d-none" >
+    <div id="noResults" class="alert alert-danger mt-4 d-flex justify-content-center align-items-center d-none">
       <h4 id="titleNoResults" class="m-0"></h4>
     </div>
 
@@ -80,6 +80,10 @@
 
   </main>
   <footer class="container-lg"></footer>
+
+  </section>
+  </main>
+  <footer class="container-lg"></footer>
   <!-- JS Files-->
   <!--JQuery, Popper + Boostrap -->
 
@@ -88,6 +92,7 @@
   <script src="./../js/print.js"></script>
   <script src="./../js/searchByCategory.js"></script>
   <script src="./../js/searchByArea.js"></script>
+
 
 </body>
 
