--- a/src/app/random.html
+++ b/src/app/random.html
@@ -9,9 +9,16 @@
   <meta name="keywords" content="Buscador de Recetas, BEDU, JS" />
 
   <title>Like A Cheff - Buscador de Recetas BEDU</title>
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="./../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="./../css/styles.css" rel="stylesheet" />
+  <link href="./../css/generator.css" rel="stylesheet" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Pacifico&display=swap">
+
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="./../favicon/apple-touch-icon.png" />
@@ -27,7 +34,8 @@
   <header class="container-lg">
     <div class="row mt-3 mb-4 d-flex align-items-center justify-content-md-between">
       <div class="col col-2">
-        <img class="img-fluid" src="./../img/logo-LikeAChef.png" alt="Logotipo Like A Chef" />
+        <a href="./index.html"><img class="img-fluid" src="./../img/logo-LikeAChef.png"
+            alt="Logotipo Like A Chef" /></a>
       </div>
       <div class="col col-6">
         <div class="row justify-content-md-center">
@@ -46,11 +54,15 @@
     </div>
   </header>
   <main class="container-lg">
-    <section id="indexResultados" class="row row-cols-1 row-cols-md-3 g-4 mt-4">
-      
-
-    </section>
+    <section id="indexResultados" class="row row-cols-1 row-cols-md-3 g-4 mt-4"></section>
   </main>
+  <div class="container">
+    <div class="row text-center">
+      <h2 id="recommendation" class="card-title">Our recommendation... ENJOY IT!!</h2>
+      <br>
+    </div>
+    <div id="meal" class="row meal"></div>
+  </div>
   <footer class="container-lg"></footer>
 
   <!-- JS Files-->
@@ -59,10 +71,9 @@
   <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   <script src="./../js/API.js"></script>
   <script src="./../js/ejemplo.js"></script>
-
+  <script src="../js/apiMeal.js"></script>
   <script>
     var inputByName = document.getElementById("searchByName");
-
 
     // Execute a function when the user presses a key on the keyboard
     inputByName.addEventListener("keypress", function (event) {
