Corrección de errores menores

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -91,7 +91,7 @@
   <!--JQuery, Popper + Boostrap -->
 
   <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-  <script src="./../js/API.js"></script>
+  <!-- <script src="./../js/API.js"></script> -->
   <script src="./../js/print.js"></script>
   <script src="./../js/searchByCategory.js"></script>
   <script src="./../js/searchByArea.js"></script>
