Hacer que los titulares cambien y borrar campos no utilizads

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -51,14 +51,14 @@
       <div class="col-4 text-center px-lg-4">
         <h5>Know dishes by their category</h5>
         <select id="searchBycategories" class="form-select" aria-label="Default select example">
-          <option selected>Select a Category</option>
+          <option selected value="0">Select a Category</option>
         </select>
       </div>
       <!-- <div class="col-4 d-flex align-items-center justify-content-start ps-4"> -->
       <div class="col-4 text-center px-lg-4">
         <h5>Know typical dishes of</h5>
-        <select id="searchByArea" class="form-select" aria-label="Default select example">
-          <option selected>Select a country</option>
+        <select id="searchByArea" class="form-select" aria-label="Default select example" >
+          <option selected value="0">Select a country</option>
         </select>
       </div>
     </div>
