limpieza de archivos

--- a/src/app/receta.html
+++ b/src/app/receta.html
@@ -37,7 +37,7 @@
         <a href="./index.html"><img class="img-fluid" src="./../img/logo-LikeAChef.png"
             alt="Logotipo Like A Chef" /></a>
       </div>
-      <div class="col col-6">
+      <!-- <div class="col col-6">
         <div class="row justify-content-md-center">
           <input type="text" id="inputByName" class="col-8" placeholder="What are we going to cook today?"
             title="Type in a name" />
@@ -45,7 +45,7 @@
             <i class="icofont-search-restaurant"></i> Search
           </button>
         </div>
-      </div>
+      </div> -->
       <div class="col-4 text-center px-lg-4">
         <h5 class="m-0">Don't know what to cook?</h5>
         <!-- <button type="button" id="btnSearchRandom" class="btn btn-chef">Recommend me a recipe</button> -->
@@ -69,10 +69,8 @@
   <!--JQuery, Popper + Boostrap -->
 
   <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-  <script src="./../js/API.js"></script>
-  <!-- <script src="./../js/ejemplo.js"></script> -->
   <script src="../js/receta.js"></script>
-  <script>
+  <!-- <script>
     var inputByName = document.getElementById("searchByName");
 
     // Execute a function when the user presses a key on the keyboard
@@ -84,7 +82,7 @@
         apiByName(search);
       }
     });
-  </script>
+  </script> -->
 </body>
 
 </html>
