Corregir Cards random.html  y receta.html.  Agregar estilos

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -24,7 +24,7 @@
 
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
   <!-- <input type="text" id="searchByName" placeholder="¿Que vamos a cocinar hoy" title="Type in a name">
   <button type="button" id="printResults">Print Results</button> -->
   <header class="container-lg">
@@ -34,7 +34,7 @@
       </div>
     </div>
   </header>
-  <main class="container-lg">
+  <main class="container-lg mb-5">
     <div class="row justify-content-md-center">
       <input type="text" id="inputByName" class="col-8" placeholder="What are we going to cook today?"
         title="Type in a name" />
@@ -79,11 +79,12 @@
     </section>
 
   </main>
-  <footer class="container-lg"></footer>
-
-  </section>
-  </main>
-  <footer class="container-lg"></footer>
+  <footer class="footer mt-auto py-4">
+    <div class="container-lg">
+      <h3>EQUIPO 17</h3>
+      <p>Carlos Jiménez | Dionicio Mata | Eder Bermudez | Ma. Eunice Vazquez | Victor Morales</p>
+    </div>
+  </footer>
   <!-- JS Files-->
   <!--JQuery, Popper + Boostrap -->
 
