--- a/src/app/random.html
+++ b/src/app/random.html
@@ -37,52 +37,37 @@
         <a href="./index.html"><img class="img-fluid" src="./../img/logo-LikeAChef.png"
             alt="Logotipo Like A Chef" /></a>
       </div>
-      <!-- <div class="col col-6">
-        <div class="row justify-content-md-center">
-          <input type="text" id="inputByName" class="col-8" placeholder="What are we going to cook today?"
-            title="Type in a name" />
-          <button type="button" id="searchByName" class="btn btn-chef col-3">
-            <i class="icofont-search-restaurant"></i> Search
-          </button>
-        </div>
-      </div> -->
+
       <div class="col-4 text-center px-lg-4">
         <h5 class="m-0">Don't know what to cook?</h5>
-        <!-- <button type="button" id="btnSearchRandom" class="btn btn-chef">Recommend me a recipe</button> -->
         <a id="searchRandom" href="./random.html">Recommend me a recipe <i class="icofont-culinary"></i></a>
       </div>
     </div>
   </header>
-  <main class="container-lg">
-    <section id="indexResultados" class="row row-cols-1 row-cols-md-3 g-4 mt-4"></section>
+
+
+  <main class="container-lg mb-5">
+    <section id="receta" class="row mt-4">
+      <div class="col text-center">
+        <h2 id="recommendation" class="card-title">Our recommendation... ENJOY IT!!</h2>
+      </div>
+      <div id="meal" class="col-12 meal"></div>
+    </section>
   </main>
-  <div class="container">
-    <div class="row text-center">
-      <h2 id="recommendation" class="card-title">Our recommendation... ENJOY IT!!</h2>
-      <br>
+
+  <footer class="footer mt-auto py-4">
+    <div class="container-lg">
+      <h3>EQUIPO 17</h3>
+      <p>Carlos Jiménez | Dionicio Mata | Eder Bermudez | Ma. Eunice Vazquez | Victor Morales</p>
     </div>
-    <div id="meal" class="row meal"></div>
-  </div>
-  <footer class="container-lg"></footer>
+  </footer>
 
   <!-- JS Files-->
   <!--JQuery, Popper + Boostrap -->
 
   <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   <script src="../js/apiMeal.js"></script>
-  <!-- <script>
-    var inputByName = document.getElementById("searchByName");
-
-    // Execute a function when the user presses a key on the keyboard
-    inputByName.addEventListener("keypress", function (event) {
-      // If the user presses the "Enter" key on the keyboard
-      if (event.key === "Enter") {
-        var search = inputByName.value.toUpperCase();
-        console.log("Buscar: ", search);
-        apiByName(search);
-      }
-    });
-  </script> -->
+  
 </body>
 
 </html>
