--- a/src/app/receta.html
+++ b/src/app/receta.html
@@ -30,7 +30,7 @@
   <meta name="theme-color" content="#ffffff" />
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
   <header class="container-lg">
     <div class="row mt-3 mb-4 d-flex align-items-center justify-content-md-between">
       <div class="col col-2">
@@ -63,13 +63,19 @@
     </div>
     <div id="meal" class="row meal"></div>
   </div>
-  <footer class="container-lg"></footer>
+  <footer class="footer mt-auto py-4">
+    <div class="container-lg">
+      <h3>EQUIPO 17</h3>
+      <p>Carlos Jiménez | Dionicio Mata | Eder Bermudez | Ma. Eunice Vazquez | Victor Morales</p>
+    </div>
+  </footer>
 
   <!-- JS Files-->
   <!--JQuery, Popper + Boostrap -->
 
   <script src="./../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   <script src="../js/receta.js"></script>
+  
   <!-- <script>
     var inputByName = document.getElementById("searchByName");
 
